--- a/FontEnd/thuchanhfont/package.json
+++ b/FontEnd/thuchanhfont/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thuchanh",
+  "name": "thuchanhfont",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +18,7 @@
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.12.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
