--- a/BackEnd/ThucHanhBack/pom.xml
+++ b/BackEnd/ThucHanhBack/pom.xml
@@ -14,6 +14,7 @@
 	<name>ThucHanh</name>
 	<description>ThucHanh</description>
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>17</java.version>
 		<jjwt.version>0.11.5</jjwt.version>
 	</properties>
